# hme-fact

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dte_signed_sample.xml  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 20260514_0001_initial_schema.py  20260514_0002_add_dte_xml.py  20260514_0003_add_dte_reference_fields.py  20260522_0004_add_tax_integrations.py  20260620_0005_phase5_updates.py  20260624_0006_fase6_saas_platform.py  20260624_0007_phase7_integrations.py  20260626_0008_add_contingency_status.py
app/: main.py
app/api/: deps.py
app/cli/: create_superuser.py  seed_certs_and_caf.py  seed_demo_data.py  seed_fase6.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: base.py  (+1 more)
docs/: api-public.md  audit-logs.md  erp-api.md  frontend-qa-checklist.md  frontend-validation.md  integration-hub.md  local-setup.md  onboarding-engine.md  onboarding.md  pdf-generation.md  pos-api.md  production-readiness.md  railway-deployment.md  rbac.md  saas-metrics.md  security-certificates.md  shopify-connector.md  sii_integration.md  subscriptions.md  superadmin.md  system-audit.md  vercel-deployment.md  webhooks.md  woocommerce-connector.md  workers.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
scripts/: coverage.sh  entrypoint_railway.sh  setup_local.sh  test-docker.sh  test-local.sh
tests/: conftest.py
(+282 files in other folders)
