[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hme-fact"
version = "0.1.0"
description = "Backend SaaS multiempresa de facturacion electronica chilena"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "bcrypt==4.0.1",
    "celery[redis]>=5.4.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "Jinja2>=3.1.2",
    "asgiref>=3.7.2",
    "lxml>=5.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pdf417gen>=0.7.5",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.8",
    "reportlab>=4.1.0",
    "sqlalchemy[asyncio]>=2.0.32",
    "uvicorn[standard]>=0.30.6",
    "xhtml2pdf>=0.2.11",
    "xmlsec>=1.3.14",
]

[project.optional-dependencies]
dev = [
    "factory-boy>=3.3.1",
    "faker>=30.0.0",
    "mypy>=1.11.1",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP037", "UP042", "UP046"]

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["F821"]

[tool.setuptools.packages.find]
include = ["app*"]
